--- a/VirtualApp/lib/src/main/res/values/dimens.xml
+++ b/VirtualApp/lib/src/main/res/values/dimens.xml
@@ -1,8 +1,6 @@
 <resources>
     <!-- notification -->
-    <dimen name="match_parent">-1px</dimen>
-    <dimen name="standard_notification_panel_width">416dp
-    </dimen><!-- includes notification_side_padding on each side -->
+    <!-- includes notification_side_padding on each side -->
     <!-- Height of a small notification in the status bar -->
     <dimen name="notification_min_height">64dp</dimen>
     <dimen name="notification_side_padding">8dp</dimen>
