--- a/VirtualApp/app/src/main/res/layout/item_clone_app.xml
+++ b/VirtualApp/app/src/main/res/layout/item_clone_app.xml
@@ -11,6 +11,13 @@
         android:layout_gravity="top|end"
         android:src="@drawable/ic_no_check" />
 
+    <ImageView
+        android:id="@+id/item_app_ishook"
+        android:layout_width="23dp"
+        android:layout_height="23dp"
+        android:layout_gravity="top|start"
+        android:src="@drawable/ic_extension_black_24dp" />
+
     <io.virtualapp.widgets.LabelView xmlns:lv="http://schemas.android.com/apk/res-auto"
         android:id="@+id/item_app_clone_count"
         android:layout_width="wrap_content"
@@ -49,7 +56,7 @@
             android:focusableInTouchMode="true"
             android:gravity="center"
             android:marqueeRepeatLimit="marquee_forever"
-            android:maxLines="1"
+            android:singleLine="true"
             android:textColor="#ffffff"
             android:textSize="12sp" />
 
