--- a/VirtualApp/lib/src/main/res/layout/custom_notification.xml
+++ b/VirtualApp/lib/src/main/res/layout/custom_notification.xml
@@ -17,37 +17,21 @@
             style="@style/notification_layout"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/btn_1"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_2"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_3"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_4"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_5"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_6"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_7"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_8"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
         </LinearLayout>
 
@@ -55,37 +39,21 @@
             style="@style/notification_layout"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/btn_9"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_10"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_11"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_12"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_13"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_14"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_15"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_16"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
         </LinearLayout>
 
@@ -93,37 +61,21 @@
             style="@style/notification_layout"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/btn_17"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_18"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_19"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_20"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_21"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_22"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_23"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_24"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
         </LinearLayout>
 
@@ -131,37 +83,21 @@
             style="@style/notification_layout"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/btn_25"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_26"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_27"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_28"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_29"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_30"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_31"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
-            <ImageView
-                android:id="@+id/btn_32"
-                style="@style/notification_button"/>
+            <ImageView style="@style/notification_button"/>
 
         </LinearLayout>
     </LinearLayout>
